# llm_offline

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  DESIGN.md  baseline_train.py  config.antmaze.yaml  config.yaml  dataGen_env.isb.yaml  dataGen_env.yaml  environment.isambard.yaml  environment.yaml  estimate_dataset.py  eval.antmaze.yaml  eval.yaml  evaluate.py  generate_antmaze_layouts.py  generated_antmaze_layouts_seed42.json  inspect_antmaze_layouts.py  inspect_jsonl_record.py  local_antmaze_gen.py  local_pointmaze_gen.py  local_varient_gen.py  plan_probe.py  pyproject.toml  reference.yaml  score.py  score.yaml  train.py
baselines/: README.md  __init__.py  artifacts.py  config.py  environment.yaml  evaluation.py  registry.py  runner.py  setup_env.sh
crossmaze/: __init__.py  _make.py  eval_position.py  families.py  layout.py  maps.py  reward.py  score.py  sensing.py  sensing_config.py  variants.py  wrapper.py
data/: base_dataset.py  registry.py
docs/: maze_generation_topology.md  official_maze_dataset_semantics.md  official_pointmaze_generation.md  openvla_action_tokenization.md  path_map_difficulty.md  rollout_process_isolation.md
model/: continuous_action.py  mtp_bin.py  policy.py
sbatch/: dataGen.ant.hard.slurm  dataGen.ant.slurm  dataGen.point.hard.slurm  dataGen.slurm  est_data.isb.slurm  evaluate.isb.slurm  remote-command.slurm  tokenize.isb.0.1.slurm  tokenize.isb.0.slurm  tokenize.isb.1.1.slurm  tokenize.isb.1.slurm  tokenize.isb.point.0.0.0.slurm  tokenize.isb.point.0.0.1.slurm  tokenize.isb.point.1.0.0.slurm  train.isb.0.1.slurm  (+20 more)
(+250 files in other folders)
